samples/_failures_safe/1761638268_8c9d79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7440d593.c: In function ‘main’:
./samples/SAFE/__tmp_7440d593.c:153:12: error: expected expression at end of input
  153 |     struct MatrixResult result = multiply_matrices(&mat1, &
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_7440d593.c:153:12: error: expected declaration or statement at end of input
